--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -4,10 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragment.FovortieFragment">
-
+    tools:context=".ui.fragment.FovoriteFragment">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Yêu Thích"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:layout_gravity="center"
+        />
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewPovortie"
+        android:id="@+id/recyclerViewfovorite"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
