--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="#FFB6C1"
     tools:context=".ui.fragment.HomeFragment">
 
     <LinearLayout
@@ -14,11 +14,12 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginLeft="30dp"
-            android:id="@+id/imageView"
+            android:id="@+id/btnHamburger"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/bagach" />
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/bagach"
+             />
 
         <ImageView
             android:layout_marginLeft="280dp"
@@ -66,18 +67,18 @@
         android:id="@+id/recyview"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="180dp" />
     <TextView
         android:layout_marginTop="30dp"
-        android:textColor="#A24629"
         android:textSize="30dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="𝓒ó 𝓽𝓱ể 𝓫ạ𝓷 đ𝓪𝓷𝓰 𝓽𝓱è𝓶?"
+        android:text="Random dishes"
         android:textStyle="bold"
         android:layout_gravity="center"
         />
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:id="@+id/recyviewMeals"
         android:layout_marginTop="30dp"
