--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -10,24 +10,25 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#24BC2A"
+        android:background="#7FD983"
         >
         <ImageView
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/imgCategory"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:src="@drawable/imgsplash"
              />
 
         <TextView
+            android:gravity="center"
             android:id="@+id/txtnameFood"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="FoodName"
-            android:textSize="15dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/imgCategory"
             app:layout_constraintTop_toBottomOf="@+id/imgCategory"
